--- a/surge1123.conf
+++ b/surge1123.conf
@@ -7,7 +7,7 @@
 # Surge 使用手册 - https://surge.mitsea.com/
 
 # 更新-2022.12.20
-# 该 URL 下载这个配置文件： https://raw.githubusercontent.com/Di1123/surge/main/surge1123.conf
+# URL下载： https://raw.githubusercontent.com/Di1123/surge/main/surge1123.conf
 
 [General]
 # > 增强版 Wi-Fi 协助
