--- a/surge1123.conf
+++ b/surge1123.conf
@@ -340,8 +340,6 @@ TestFlight下载修正 = type=http-request,pattern=^https?:\/\/testflight\.apple
 
 Web豆瓣电影和电视剧添加便捷播放按钮 = type=http-response,pattern=^https?:\/\/m\.douban\.com\/movie\/subject\/\d+\/,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/I-am-R-E/Surge/main/JavaScript/DouBan.js
 
-Q-Search = type=http-request,pattern=^https:\/\/duckduckgo.com\/\?q=.+,script-path=Q-Search.js
-
 豆瓣影视 = type=http-response,pattern=^https://m.douban.com/movie/subject/.+,requires-body=1,max-size=0,script-path=https://raw.githubusercontent.com/githubdulong/Script/master/Douban.js
 
 [SSID Setting]
@@ -356,4 +354,4 @@ tcp-connection = true
 # MITM over HTTP/2
 h2 = true
 
-hostname = duckduckgo.com, *.google.cn, *.google.com.hk, sub.store, boxer.baidu.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, testflight.apple.com, pan.baidu.com, m.douban.com, h5.xiuxiu.meitu.com, api.xiuxiu.meitu.com, api.diaoyu.com, duckduckgo.com, %APPEND% m.douban.com
+hostname = duckduckgo.com, *.google.cn, *.google.com.hk, sub.store, boxer.baidu.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, testflight.apple.com, pan.baidu.com, m.douban.com, h5.xiuxiu.meitu.com, api.xiuxiu.meitu.com, api.diaoyu.com, %APPEND% m.douban.com
