--- a/surge1123.conf
+++ b/surge1123.conf
@@ -316,10 +316,6 @@ falogin.cn = server:syslib // FAST Router
 ^https?:\/\/(www\.)?google\.cn https://www.google.com/ncr 302
 
 [Script]
-Sub-Store = type=http-request,pattern=^https?:\/\/sub\.store\/((download)|api\/(preview|sync|(utils\/node-info))),script-path=https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-1.min.js,requires-body=true,timeout=120,ability=http-client-policy
-Sub-Store = type=http-request,pattern=^https?:\/\/sub\.store,script-path=https://github.com/sub-store-org/Sub-Store/releases/latest/download/sub-store-0.min.js,requires-body=true
-
-机场信息 = type=http-request,pattern=http://sub\.info,script-path=https://raw.githubusercontent.com/TributePaulWalker/Profiles/main/JavaScript/Surge/Sub_info_lite.js,timeout=10
 
 百度搜索防跳转 = type=http-response,pattern=^https?\:\/\/boxer\.baidu\.com\/scheme,script-path=https://raw.githubusercontent.com/app2smile/rules/master/js/baidu-no-redirect.js
 
@@ -354,4 +350,4 @@ tcp-connection = true
 # MITM over HTTP/2
 h2 = true
 
-hostname = duckduckgo.com, *.google.cn, *.google.com.hk, sub.store, boxer.baidu.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, testflight.apple.com, pan.baidu.com, m.douban.com, h5.xiuxiu.meitu.com, api.xiuxiu.meitu.com, api.diaoyu.com, %APPEND% m.douban.com
+hostname = duckduckgo.com, *.google.cn, *.google.com.hk, boxer.baidu.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, testflight.apple.com, pan.baidu.com, m.douban.com, api.diaoyu.com, %APPEND% m.douban.com
