--- a/surge1123.conf
+++ b/surge1123.conf
@@ -177,18 +177,18 @@ GEOIP,CN,Direct
 FINAL,Final,dns-failed
 
 [Host]
-# > Firebase Cloud Messaging
+# Firebase Cloud Messaging
 mtalk.google.com = 108.177.125.188
 
-# > Google Dl
+# Google Dl
 dl.google.com = server:119.29.29.29
 dl.l.google.com = server:119.29.29.29
 update.googleapis.com = server:119.29.29.29
 
-# > PlayStation
+# PlayStation
 *.dl.playstation.net = server:119.29.29.29
 
-# > Router Admin Panel
+# Router Admin Panel
 amplifi.lan = server:syslib // Ubiquiti Amplifi Router
 router.synology.com = server:syslib // Synology Router
 sila.razer.com = server:syslib // Razer Sila Router
@@ -205,6 +205,9 @@ tplogin.cn = server:syslib // TP-Link Router
 tplinklogin.net = server:syslib // TP-Link Router
 melogin.cn = server:syslib // MERCURY Router
 falogin.cn = server:syslib // FAST Router
+
+# Apple TestFlight
+*testflight.apple.com = server:8.8.4.4
 
 [Header Rewrite]
 
