--- a/surge1123.conf
+++ b/surge1123.conf
@@ -287,4 +287,10 @@ Web豆瓣电影和电视剧添加便捷播放按钮 = type=http-response,pattern
 # 跳过服务端证书验证
 skip-server-cert-verify = true
 
+# 用于 TCP 连接
+tcp-connection = true
+
+# MITM over HTTP/2
+h2 = true
+
 hostname = duckduckgo.com, *.google.cn, *.google.com.hk, boxer.baidu.com, api.weibo.cn, mapi.weibo.com, *.uve.weibo.com, -*.weibo.com, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, testflight.apple.com, pan.baidu.com, m.douban.com, api.diaoyu.com, %APPEND% m.douban.com
