--- a/surge1123.conf
+++ b/surge1123.conf
@@ -51,12 +51,7 @@ loglevel = notify
 # > 当遇到 REJECT 策略时返回错误页
 show-error-page-for-reject = true
 
-# > Always Real IP Hosts
-always-real-ip = *.msftconnecttest.com, *.msftncsi.com, *.srv.nintendo.net, *.stun.playstation.net, xbox.*.microsoft.com, *.xboxlive.com, *.logon.battlenet.com.cn, *.logon.battle.net, stun.l.google.com
-
-# > VIF Excluded Routes
-tun-excluded-routes = 239.255.255.250/32
-
+# > UDP IP 防泄漏
 # 如果没有代理服务器支持 UDP 转发，可修改为「 direct 」或注释下条，但需注意同一目标主机名 TCP 请求与 UDP 请求的源地址不同所造成的隐私及安全风险。
 udp-policy-not-supported-behaviour = reject
 
