--- a/surge1123.conf
+++ b/surge1123.conf
@@ -198,4 +198,4 @@ tcp-connection = true
 # MITM over HTTP/2
 h2 = true
 
-hostname = duckduckgo.com, *.google.cn, *.google.com.hk, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, m.douban.com, api.diaoyu.com, %APPEND% m.douban.com, %APPEND% sub.store
+hostname=%APPEND% sub.store, duckduckgo.com, *.google.cn, *.google.com.hk, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, m.douban.com, api.diaoyu.com, m.douban.com
