--- a/surge1123.conf
+++ b/surge1123.conf
@@ -108,6 +108,9 @@ SG = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, updat
 US = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇺🇸)|(美)|(States)|(US), hidden=false
 
 [Rule]
+# Sub-Store 的 Web 页面
+DOMAIN-SUFFIX,vercel.app,Proxy
+
 # 屏蔽HTTP3/QUIC协议
 # 阻止所有UDP流量进入443端口，使HTTP3请求回落到TCP流量。
 AND,((PROTOCOL,UDP),(DEST-PORT,443)),REJECT-NO-DROP
@@ -196,4 +199,4 @@ tcp-connection = true
 # MITM over HTTP/2
 h2 = true
 
-hostname=%APPEND% sub.store, duckduckgo.com, *.google.cn, *.google.com.hk, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, m.douban.com, api.diaoyu.com, m.douban.com
+hostname=%APPEND% sub.store, *.google.cn, *.google.com.hk, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, m.douban.com, api.diaoyu.com, m.douban.com
