--- a/surge1123.conf
+++ b/surge1123.conf
@@ -202,4 +202,4 @@ tcp-connection = true
 # MITM over HTTP/2
 h2 = true
 
-hostname=%APPEND% sub.store, *.google.cn, *.google.com.hk, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, m.douban.com, api.diaoyu.com, m.douban.com
+hostname = sub.store, *.google.cn, *.google.com.hk, mp.weixin.qq.com, security.wechat.com, weixin110.qq.com, m.douban.com, api.diaoyu.com, m.douban.com
