--- a/surge1123.conf
+++ b/surge1123.conf
@@ -4,11 +4,10 @@
 # 理解原理 - https://manual.nssurge.com/book/understanding-surge/cn/
 # 帮助中心 - https://nssurge.zendesk.com/
 # 技术社区 - https://community.nssurge.com
-# Surge 使用手册 - https://surge.mitsea.com/
+# 配置详解 - https://divineengine.net/more/special/surge/
 # URL下载： https://raw.githubusercontent.com/Di1123/surge/main/surge1123.conf
 
-# 更新-2022.12.30
-
+# 更新-2023-1-5
 [General]
 # > 增强版 Wi-Fi 协助
 # 在 Wi-Fi 网络不佳时尝试使用数据网络建立连接，请仅当使用不限量的数据流量时开启，默认开启。
@@ -27,7 +26,7 @@ geoip-maxmind-url = https://raw.githubusercontent.com/Loyalsoldier/geoip/release
 # > GeoIP 数据库自动更新
 disable-geoip-db-auto-update = false
 
-# > Network framwork
+# > 网络架构
 network-framework = false
 
 # > 切换网络后不再重新进行 VPN 配置
@@ -77,35 +76,15 @@ hide-udp = false
 配置重载 = title=配置重载,content=配置重载,style=info,script-name=配置重载,update-interval=-1
 
 [Proxy]
-Direct = direct
-Reject = reject
 
 [Proxy Group]
-Proxy = select, HK, TW, JP, SG, US
-
-Final = select, Proxy, Direct
-
-# 国内用户建议直连。
-YouTube = select, HK, TW, JP, SG, US
-
-Telegram = select, HK, SG, US
-
-# 以下策略根据自己需求自行删除注释"#"即可。
-# Disney+ = select, HK, TW, JP,  SG, US
-# Netflix = select, HK, TW, JP, SG, US
-# Spotify = select, HK, TW, JP, SG, US
-
-Streaming = select, HK, TW, JP, SG, US
-
-HK = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), hidden=false
-
-TW = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), hidden=false
-
-JP = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP), hidden=false
-
-SG = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), hidden=false
-
-US = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇺🇸)|(美)|(States)|(US), hidden=false
+🚀 节点选择 = select, DIRECT, ♻️ 自动选择, 👋 手动切换
+👋 手动切换 = select, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=0
+♻️ 自动选择 = url-test, url=http://www.gstatic.com/generate_204, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=86400, timeout=0, interval=300, tolerance=0
+🎯 全球直连 = select, DIRECT, 🚀 节点选择
+🛑 全球拦截 = select, REJECT, DIRECT
+🎶 网易音乐 = select, REJECT, DIRECT, 解锁网易云音乐
+🐟 漏网之鱼 = select, 🚀 节点选择, 🎯 全球直连, DIRECT
 
 [Rule]
 # Sub-Store 的 Web 页面
