--- a/surge1123.conf
+++ b/surge1123.conf
@@ -76,11 +76,13 @@ hide-udp = false
 配置重载 = title=配置重载,content=配置重载,style=info,script-name=配置重载,update-interval=-1
 
 [Proxy]
+Direct = direct
+Reject = reject
 
 [Proxy Group]
 🚀 节点选择 = select, DIRECT, ♻️ 自动选择, 👋 手动切换
 👋 手动切换 = select, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=0
-♻️ 自动选择 = url-test, url=http://www.gstatic.com/generate_204, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=86400, timeout=0, interval=300, tolerance=0
+♻️ 自动选择 = url-test, url=http://cp.cloudflare.com/generate_204, policy-path=https://subcon.py6.pw/sub?target=surge&ver=4&emoji=true&list=true&udp=false&tfo=false&scv=false&fdn=false&sort=false, update-interval=86400, timeout=0, interval=300, tolerance=0
 🎯 全球直连 = select, DIRECT, 🚀 节点选择
 🛑 全球拦截 = select, REJECT, DIRECT
 🎶 网易音乐 = select, REJECT, DIRECT, 解锁网易云音乐
