--- a/surge1123.conf
+++ b/surge1123.conf
@@ -82,6 +82,8 @@ Reject = reject
 Proxy = select, 香港, 台湾, 日本, 新加坡, 美国
 Final = select, Proxy, Direct
 
+Streaming = select, 香港, 台湾, 日本, 新加坡, 美国
+
 香港 = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), hidden=false
 
 台湾 = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), hidden=false
