--- a/surge1123.conf
+++ b/surge1123.conf
@@ -83,15 +83,15 @@ Final = select, Proxy, Direct
 
 Streaming = select, HK, TW, JP, SG, US
 
-HK = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), hidden=false
+HK = url-test, policy-path=https://sub.store/download/collection/1123, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇭🇰)|(港)|(Hong)|(HK), hidden=false
 
-TW = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), hidden=false
+TW = url-test, policy-path=https://sub.store/download/collection/1123, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇨🇳)|(台)|(Tai)|(TW), hidden=false
 
-JP = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP), hidden=false
+JP = url-test, policy-path=https://sub.store/download/collection/1123, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇯🇵)|(日)|(Japan)|(JP), hidden=false
 
-SG = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), hidden=false
+SG = url-test, policy-path=https://sub.store/download/collection/1123, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇸🇬)|(新)|(Singapore)|(SG), hidden=false
 
-US = url-test, policy-path=你的订阅地址, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇺🇸)|(美)|(States)|(US), hidden=false
+US = url-test, policy-path=https://sub.store/download/collection/1123, interval=600, tolerance=50, update-interval=86400, policy-regex-filter=(🇺🇸)|(美)|(States)|(US), hidden=false
 
 [Rule]
 # 对应图形界面中「出站模式」下的「代理规则」
